# Kinect-Record

./: CMakeLists.txt  README
src/: openni_loader.cpp  openni_viewer_simple.cpp
